feat: add dependensies